all-in-one.yaml
# File: all-in-one.yaml

---

apiVersion: v1
kind: Namespace
metadata:
name: server-request-uat

---

apiVersion: apps/v1
kind: Deployment
metadata:
name: postgresql
namespace: server-request-uat
spec:
replicas: 1
selector:
matchLabels:
app: postgresql
template:
metadata:
labels:
app: postgresql
spec:
containers:
- name: postgresql
image: registry.redhat.io/rhel8/postgresql-16
ports:
- containerPort: 5432
value: serveradmin
- name: POSTGRESQL_PASSWORD
value: Redhat@123
- name: POSTGRESQL_DATABASE
value: serverdb
volumeMounts:
- mountPath: /var/lib/pgsql/data
name: postgres-storage
volumes:
- name: postgres-storage
persistentVolumeClaim:
claimName: postgres-pvc

---

apiVersion: v1
kind: Service
metadata:
name: postgresql
namespace: server-request-uat
spec:
selector:
app: postgresql
ports:

* port: 5432
  targetPort: 5432

---

apiVersion: apps/v1
kind: Deployment
metadata:
name: server-api
namespace: server-request-uat
spec:
replicas: 1
selector:
matchLabels:
app: server-api
template:
metadata:
labels:
app: server-api
spec:
containers:
- name: server-api
image: image-registry.openshift-image-registry.svc:5000/server-request-uat/server-api:latest
imagePullPolicy: Always
ports:
- containerPort: 8080
value: postgresql
- name: DB_NAME
value: serverdb
- name: DB_USER
value: serveradmin
- name: DB_PASSWORD
value: Redhat@123

---

apiVersion: v1
kind: Service
metadata:
name: server-api
namespace: server-request-uat
spec:
selector:
app: server-api
ports:

* port: 8080
  targetPort: 8080

---

apiVersion: apps/v1
kind: Deployment
metadata:
name: server-ui
namespace: server-request-uat
spec:
replicas: 1
selector:
matchLabels:
app: server-ui
template:
metadata:
labels:
app: server-ui
spec:
containers:
- name: server-ui
image: image-registry.openshift-image-registry.svc:5000/server-request-uat/server-ui:latest
imagePullPolicy: Always
ports:
- containerPort: 8080
value: http://server-api:8080

---

apiVersion: v1
kind: Service
metadata:
name: server-ui
namespace: server-request-uat
spec:
selector:
app: server-ui
ports:

* port: 8080
  targetPort: 8080

---

apiVersion: route.openshift.io/v1
kind: Route
metadata:
name: server-ui
namespace: server-request-uat
spec:
host: serverform.ocp.celcomdigi.com
to:
kind: Service
name: server-ui
port:
targetPort: 8080
tls:
termination: edge
insecureEdgeTerminationPolicy: Redirect
